test/error/polyUnboxed.stg
id = FUN(x -> x);
-- should fail unification
fun = FUN(x -> id 1);

main = THUNK(id);